@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-17T16:38:45Z",
+  "timestamp" : "2022-10-22T16:29:26Z",
   "count_outdated" : 1,
   "uniques_outdated" : 1,
-  "count" : 3,
-  "uniques" : 3,
+  "count" : 4,
+  "uniques" : 4,
   "clones" : [
     {
       "timestamp": "2022-10-12T00:00:00Z",
@@ -11,6 +11,13 @@
       "count_minmax": [ 2, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-10-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
