@@ -1,11 +1,16 @@
 {
-  "count": 2,
-  "uniques": 2,
+  "count": 3,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-10-12T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-10-22T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
